force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Last_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Last_Open_Date__c</fullName>
    <inlineHelpText>Date when the email was last opened by recipient.</inlineHelpText>
    <label>Last Open Date</label>
    <type>DateTime</type>
</CustomField>