force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Last_Workflow_Action__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Last_Workflow_Action__c</fullName>
    <description>Last performed workflow action.</description>
    <inlineHelpText>Last performed workflow action.</inlineHelpText>
    <label>Last Workflow Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Do not advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>