force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Metrics_Filter__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Metrics_Filter__c</fullName>
    <description>A field to represent filtered feedback gathered through the survey.</description>
    <inlineHelpText>A field to represent filtered feedback gathered through the survey.</inlineHelpText>
    <label>Metrics Filter</label>
    <type>TextArea</type>
</CustomField>