force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Next_Dispatch_Time__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Next_Dispatch_Time__c</fullName>
    <description>Datetime at which the survey will be dispatched again to the assignee of this result. When a survey result is dispatched and recurrence is defined for the associated survey, next dispatch date on the survey result is set.</description>
    <inlineHelpText>Datetime at which the survey will be dispatched again to the assignee of this result.</inlineHelpText>
    <label>Next Dispatch Time</label>
    <type>DateTime</type>
</CustomField>