force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__NPS_Comment__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__NPS_Comment__c</fullName>
    <description>NPS survey respondent’s feedback comment.</description>
    <inlineHelpText>NPS survey respondent’s feedback comment.</inlineHelpText>
    <label>NPS Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>