force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__NPS_Detractors__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__NPS_Detractors__c</fullName>
    <description>Set to 1 when the respondent’s response is between 0-6.</description>
    <formula>IF(( ArdiraSurvey__NPS_Score__c &gt;=0 &amp;&amp; ArdiraSurvey__NPS_Score__c &lt;=6),1,0)</formula>
    <inlineHelpText>Set to 1 when the respondent’s response is between 0-6.</inlineHelpText>
    <label>NPS Detractors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>