force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__NPS_Passives__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__NPS_Passives__c</fullName>
    <description>Set to 1 when the respondent’s response is between 7-8.</description>
    <formula>IF((ArdiraSurvey__NPS_Score__c&gt;=7 &amp;&amp;  ArdiraSurvey__NPS_Score__c&lt;=8),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to 1 when the respondent’s response is between 7-8.</inlineHelpText>
    <label>NPS Passives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>