force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__NPS_Promoters__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__NPS_Promoters__c</fullName>
    <description>Set to 1 when the respondent’s response is between 9-10.</description>
    <formula>IF((ArdiraSurvey__NPS_Score__c&gt;=9 &amp;&amp;  ArdiraSurvey__NPS_Score__c&lt;=10),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to 1 when the respondent’s response is between 9-10.</inlineHelpText>
    <label>NPS Promoters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>