force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__NPS_Response__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__NPS_Response__c</fullName>
    <description>NPS survey respondent&apos;s response in qualitative label.</description>
    <formula>IF(ArdiraSurvey__NPS_Score__c&gt;=0 &amp;&amp; ArdiraSurvey__NPS_Score__c &lt;=6 ,&apos;Detractors&apos; ,IF(ArdiraSurvey__NPS_Score__c&gt;=7 &amp;&amp; ArdiraSurvey__NPS_Score__c&lt;=8 ,&apos;Passives&apos;,IF(ArdiraSurvey__NPS_Score__c&gt;=9 &amp;&amp; ArdiraSurvey__NPS_Score__c&lt;=10,&apos;Promoters&apos;,&apos;&apos;)))</formula>
    <inlineHelpText>NPS survey respondent&apos;s response in qualitative label.</inlineHelpText>
    <label>NPS Response</label>
    <type>Text</type>
</CustomField>