force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Number_of_Attempts__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Number_of_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This refers to the number of times a responder has already attempted a quiz.</description>
    <inlineHelpText>This refers to the number of times a responder has already attempted a quiz.</inlineHelpText>
    <label>Number of Retakes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>