force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Number_of_Attempts_Allowed__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Number_of_Attempts_Allowed__c</fullName>
    <description>This setting allows you to specify the number of times a user can retake a quiz in order to pass it. For example, if you set the number of retakes allowed to 3, a user will have up to 3 attempts to pass the quiz.</description>
    <formula>ArdiraSurvey__Survey__r.ArdiraSurvey__Number_of_Attempts_Allowed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This setting allows you to specify the number of times a user can retake a quiz in order to pass it. For example, if you set the number of retakes allowed to 3, a user will have up to 3 attempts to pass the quiz.</inlineHelpText>
    <label>Number of Retakes Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>