force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Number_of_Attempts_Remaining__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Number_of_Attempts_Remaining__c</fullName>
    <description>This refers to the number of times a user is still allowed to retake a quiz in order to complete it, based on the maximum number of retakes allowed. For example, if a user is allowed up to 3 retakes to pass the quiz and has already taken the quiz twice, their &quot;number of retakes remaining&quot; would be 1.</description>
    <formula>ArdiraSurvey__Number_of_Attempts_Allowed__c  -  ArdiraSurvey__Number_of_Attempts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This refers to the number of times a user is still allowed to retake a quiz in order to complete it, based on the maximum number of retakes allowed. For example, if a user is allowed up to 3 retakes to pass the quiz and has already taken the quiz twice, their &quot;number of retakes remaining&quot; would be 1.</inlineHelpText>
    <label>Number of Retakes Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>