force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Participant_Browser_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Participant_Browser_Name__c</fullName>
    <description>This field contain participant browser name.</description>
    <inlineHelpText>This field contain participant browser name.</inlineHelpText>
    <label>Participant Browser Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>