force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Participant_Browser_Version__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Participant_Browser_Version__c</fullName>
    <description>This field contain participant browser version number.</description>
    <inlineHelpText>This field contain participant browser version number.</inlineHelpText>
    <label>Participant Browser Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>