force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Participant_OS__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Participant_OS__c</fullName>
    <description>This field contain participant operating system name and version number.</description>
    <inlineHelpText>This field contain participant operating system name and version number.</inlineHelpText>
    <label>Participant Operating System</label>
    <length>30</length>
    <type>Text</type>
</CustomField>