force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Passing_Score__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Passing_Score__c</fullName>
    <description>Minimum required score to pass the quiz.</description>
    <formula>ArdiraSurvey__Survey__r.ArdiraSurvey__Passing_Score__c</formula>
    <inlineHelpText>Minimum required score to pass the quiz.</inlineHelpText>
    <label>Passing Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>