force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Previous_Workflow_Stage__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Previous_Workflow_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous workflow stage.</description>
    <inlineHelpText>Previous workflow stage.</inlineHelpText>
    <label>Previous Workflow Stage</label>
    <referenceTo>ArdiraSurvey__Survey_Workflow_Stage__c</referenceTo>
    <relationshipLabel>Ardira Survey Results(Prev)</relationshipLabel>
    <relationshipName>Ardira_Survey_Results_Prev</relationshipName>
    <type>Lookup</type>
</CustomField>