force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Progress__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Progress__c</fullName>
    <description>Survey progress</description>
    <formula>((ArdiraSurvey__Responded_Count__c + ArdiraSurvey__Dependent_Responded_Count__c)/(ArdiraSurvey__Dependent_Total_Count__c + ArdiraSurvey__Total_Count__c - ArdiraSurvey__Response_Not_Required_Count__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Survey progress.</inlineHelpText>
    <label>Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>