force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Record_Edit_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Record_Edit_URL__c</fullName>
    <description>A url to open record edit for standard platform users and open survey responder app for guest &amp; community users.</description>
    <formula>IF(ISBLANK(ArdiraSurvey__Shortened_Response_URL__c),
IF(ArdiraSurvey__Community_Assignment__c == true,
	(ArdiraSurvey__Survey__r.ArdiraSurvey__Community_URL__c &amp; 							IF(ISBLANK(ArdiraSurvey__Survey__r.ArdiraSurvey__Experience_Cloud_Survey_Response_Page__c), &quot;/ArdiraSurvey/SurveyResponse.app&quot;, ArdiraSurvey__Survey__r.ArdiraSurvey__Experience_Cloud_Survey_Response_Page__c)) &amp; IF(ISBLANK(ArdiraSurvey__Shortened_URL_Unique_Key__c),&quot;?logicalId=&quot; &amp; ArdiraSurvey__Logical_Id__c &amp; &quot;&amp;recordId=&quot; &amp; Id,&quot;?sr=&quot;&amp;ArdiraSurvey__Shortened_URL_Unique_Key__c)&amp; IF(ArdiraSurvey__Survey__r.ArdiraSurvey__CS_Do_Not_Require_Authentication__c = False, &quot;&amp;ut=&quot; &amp; text((CreatedDate - DATETIMEVALUE( &quot;1970-01-01 00:00:00&quot; )) * 86400), &quot;&quot;),
LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) &amp; &quot;lightning/r/&quot; &amp; Id &amp; &quot;/edit&quot;
),ArdiraSurvey__Shortened_Response_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A URL to send to the survey participant for this survey result. Use this URL instead of Response URL field to have better file upload support.</inlineHelpText>
    <label>Record Edit URL</label>
    <type>Text</type>
</CustomField>