force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Recurrence_Source__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Recurrence_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original survey result record that initiated this recurrence.</description>
    <inlineHelpText>Original survey result record that initiated this recurrence.</inlineHelpText>
    <label>Recurrence Source</label>
    <referenceTo>ArdiraSurvey__Survey_Result__c</referenceTo>
    <relationshipLabel>Recurring Results</relationshipLabel>
    <relationshipName>Recurring_Results</relationshipName>
    <type>Lookup</type>
</CustomField>