force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Reminder_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Reminder_Message__c</fullName>
    <description>Text of the reminder notification.</description>
    <inlineHelpText>Text of the reminder notification.</inlineHelpText>
    <label>Reminder Message</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>