force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Reminder_Notification_Selector__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Reminder_Notification_Selector__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to trigger process builder to send email reminders.</description>
    <inlineHelpText>Used to trigger process builder to send email reminders.</inlineHelpText>
    <label>Dep Reminder Notification Selector</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>