force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Reminder_Subject__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Reminder_Subject__c</fullName>
    <description>Subject line of the reminder notification.</description>
    <inlineHelpText>Subject line of the reminder notification.</inlineHelpText>
    <label>Reminder Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>