force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Respond_Survey__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Respond_Survey__c</fullName>
    <description>Users can use this link to respond to the survey.</description>
    <formula>IF(ISPICKVAL(ArdiraSurvey__Status__c , &apos;Completed&apos;),&apos;&apos;,(HYPERLINK(LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) &amp; &quot;lightning/r/&quot; &amp; Id &amp; &quot;/edit&quot;,   IF(ArdiraSurvey__Workflow_Stage_Name__c  != &apos;&apos;, ArdiraSurvey__Workflow_Stage_Name__c , &quot;Respond&quot;) , &quot;_blank&quot;)))</formula>
    <inlineHelpText>Users can use this link to respond to the survey.</inlineHelpText>
    <label>Click to Respond</label>
    <type>Text</type>
</CustomField>