force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Responded_By__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Responded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who has submitted responses to the survey.</description>
    <inlineHelpText>User who has submitted responses to the survey.</inlineHelpText>
    <label>Responded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ardira_Survey_Results</relationshipName>
    <type>Lookup</type>
</CustomField>