force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Responded_Count__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Responded_Count__c</fullName>
    <description>Count of all questions with responses. Note that this count does not include dependent questions that may require response based on a source question response.</description>
    <inlineHelpText>Count of responded questions. Note that this count does not include dependent questions that may require response based on a source question response.</inlineHelpText>
    <label>Responded Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>