force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Response_Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Response_Analysis_Date__c</fullName>
    <description>Response Analysis was performed on this date.</description>
    <inlineHelpText>Response Analysis was performed on this date.</inlineHelpText>
    <label>Response Analysis Date</label>
    <type>Date</type>
</CustomField>