force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Response_Analysis_Notes__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Response_Analysis_Notes__c</fullName>
    <description>Notes taken during response analysis.</description>
    <inlineHelpText>Notes taken during response analysis.</inlineHelpText>
    <label>Response Analysis Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>