force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Response_Channel__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Response_Channel__c</fullName>
    <description>This field indicates the specific channel or source through which the survey response was gathered or collected.</description>
    <inlineHelpText>This field indicates the specific channel or source through which the survey response was gathered or collected.</inlineHelpText>
    <label>Response Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Email</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>SMS</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Chat</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>QR Code</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Web Form</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>WhatsApp</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>