force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Response_End_Time__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Response_End_Time__c</fullName>
    <description>Time at which survey response was completed.</description>
    <inlineHelpText>Survey response completion time.</inlineHelpText>
    <label>Response End Time</label>
    <type>DateTime</type>
</CustomField>