force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Response_Language__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Response_Language__c</fullName>
    <description>Language used to respond to the survey.</description>
    <inlineHelpText>Language used to respond to the survey.</inlineHelpText>
    <label>Response Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ArdiraSurvey__Survey_Languages</valueSetName>
    </valueSet>
</CustomField>