force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Response_Mapping_Errors__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Response_Mapping_Errors__c</fullName>
    <description>Errors encountered when executing the response mapping rules for the survey.</description>
    <inlineHelpText>Errors encountered when executing the response mapping rules for the survey.</inlineHelpText>
    <label>Response Mapping Errors</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>