force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Response_Mapping_Execution_Log__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Response_Mapping_Execution_Log__c</fullName>
    <description>This field stores detailed information regarding the execution of Response Mapping Rules for each survey result, including the outcomes of each execution.</description>
    <inlineHelpText>This field stores detailed information regarding the execution of Response Mapping Rules for each survey result, including the outcomes of each execution.</inlineHelpText>
    <label>Response Mapping Execution Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>