force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Response_Not_Required_Count__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Response_Not_Required_Count__c</fullName>
    <description>Count of all dependent questions skipped based on the question dependency rules.</description>
    <inlineHelpText>Count of questions that do not require a response, based on the question dependency rules.</inlineHelpText>
    <label>Response Not Required Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>