force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Response_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Response_Start_Time__c</fullName>
    <description>Time when the survey response was started.</description>
    <inlineHelpText>Time when the participant started responding to the survey.</inlineHelpText>
    <label>Response Start Time</label>
    <type>DateTime</type>
</CustomField>