force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Responses_Mapped_Time__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Responses_Mapped_Time__c</fullName>
    <description>Time when the responses were last mapped.</description>
    <inlineHelpText>Time when the survey response mapping rules were executed.</inlineHelpText>
    <label>Responses Mapped Time</label>
    <type>DateTime</type>
</CustomField>