force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Retake_Allowed__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Retake_Allowed__c</fullName>
    <description>If true, retake is allowed for this survey.</description>
    <formula>AND(
	NOT(ISNULL(ArdiraSurvey__Passing_Score__c)),
	ArdiraSurvey__Survey__r.ArdiraSurvey__Enable_Scoring_Survey_Responses__c = TRUE,
	ArdiraSurvey__Survey__r.ArdiraSurvey__Execute_Synchronous_Scoring__c = TRUE,
	ArdiraSurvey__Number_of_Attempts_Remaining__c &gt; 0,
	OR( 
		AND( 
			ISPICKVAL(ArdiraSurvey__Survey__r.ArdiraSurvey__CO_Scoring_Method__c, &quot;Raw&quot;),
			IF(ISNULL(ArdiraSurvey__Score_Raw__c),
				TRUE,
        	    IF(ArdiraSurvey__Passing_Score__c &lt; ArdiraSurvey__Max_Score_Raw__c,
					ArdiraSurvey__Score_Raw__c &lt; ArdiraSurvey__Passing_Score__c,
					ArdiraSurvey__Score_Raw__c &lt; ArdiraSurvey__Max_Score_Raw__c 
				)
			)
		),
		AND( 
			ISPICKVAL(ArdiraSurvey__Survey__r.ArdiraSurvey__CO_Scoring_Method__c, &quot;Percentage&quot;),
			IF(ISNULL(ArdiraSurvey__Score_Percentage__c),
				TRUE,
	            IF(ArdiraSurvey__Passing_Score__c &lt; 100,
					(ArdiraSurvey__Score_Percentage__c * 100) &lt; ArdiraSurvey__Passing_Score__c,
					(ArdiraSurvey__Score_Percentage__c * 100) &lt; 100
				)
			)
		)
	)
)</formula>
    <inlineHelpText>If true, retake is allowed for this survey.</inlineHelpText>
    <label>Retake Allowed</label>
    <type>Checkbox</type>
</CustomField>