force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Score_Calculation_Errors__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Score_Calculation_Errors__c</fullName>
    <description>Errors encountered when calculating the score for the survey.</description>
    <inlineHelpText>Errors encountered when calculating the score for the survey.</inlineHelpText>
    <label>Score Calculation Errors</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>