force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Score_Colored_Bar_Value__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Score_Colored_Bar_Value__c</fullName>
    <description>Score level achieved by the survey response.</description>
    <inlineHelpText>Score level achieved by the survey response.</inlineHelpText>
    <label>Score Colored Bar</label>
    <length>4096</length>
    <type>Html</type>
</CustomField>