force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Score_Percentage__c</fullName>
    <description>Average of the percentage score of all the questions in survey</description>
    <inlineHelpText>Survey response percentage score (average of all questions percentage scores).</inlineHelpText>
    <label>Score (Percentage)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>