force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Score_Raw__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Score_Raw__c</fullName>
    <description>Sum of the raw scores of all the questions in the survey.</description>
    <inlineHelpText>Survey response raw score (sum of the raw scores of all the questions).</inlineHelpText>
    <label>Score (Raw)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>