force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Share_With_Groups__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Share_With_Groups__c</fullName>
    <description>This survey result to be shared with these public groups via criteria based sharing rules.</description>
    <inlineHelpText>This survey result to be shared with these public groups via criteria based sharing rules.</inlineHelpText>
    <label>Share With Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>