force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Shortened_Response_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Shortened_Response_URL__c</fullName>
    <description>Shortened Response URL to be used for responding to the survey and as a merge field in email templates.</description>
    <inlineHelpText>Shortened Response URL to be used for responding to the survey and as a merge field in email templates.</inlineHelpText>
    <label>Shortened Response URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>