force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__Shortened_URL_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Shortened_URL_Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>URL key generated to uniquely identify the survey result.</description>
    <externalId>true</externalId>
    <inlineHelpText>This key is generated to uniquely identify the shortened URL associated with the survey result.</inlineHelpText>
    <label>Shortened URL Unique Key</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>