force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__SMS_Dispatch_Error__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__SMS_Dispatch_Error__c</fullName>
    <description>Stores error when an SMS API request fails. Empty/null when no SMS dispatch error.</description>
    <inlineHelpText>Stores error when an SMS API request fails. Empty/null when no SMS dispatch error.</inlineHelpText>
    <label>SMS Dispatch Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>