force-app/main/default/objects/ArdiraSurvey__Survey_Result__c/fields/ArdiraSurvey__SMS_Notification_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__SMS_Notification_Message__c</fullName>
    <description>When SMS notifications are enabled, this message will be sent via SMS along with the survey link. Please note that you may need to obtain approval from your SMS service provider for the content of the message.</description>
    <inlineHelpText>When SMS notifications are enabled, this message will be sent via SMS along with the survey link. Please be aware that you might require approval from your SMS service provider for the message content.</inlineHelpText>
    <label>SMS Notification Message</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>